bitbybit-tests/tests/ui/multiple_catchall.stderr
error: custom attribute panicked
 --> tests/ui/multiple_catchall.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: bitenum!: only one variant can be designated as the catchall
